@@ -180,7 +180,8 @@ Available options:
 <input type="CHECKBOX" name="LIGANDCHECK" onClick="setligand()"> Assign charges to the ligand specified in a MOL2 file</input>: <input type="file" name="LIGAND" size="25" maxlength=100 value="" DISABLED><BR>
 <input type="CHECKBOX" name="INPUT" onClick="setchain()"> Create an <a href="http://apbs.sourceforge.net">APBS</a> input file <span style="font-size:60%">(this also enables the option to run APBS and visualize your results through the web interface, if it has been installed)</span><BR>
 <input type="CHECKBOX" name="CHAIN"> Add/keep chain IDs in the PQR file<BR>
-<input type="CHECKBOX" name="WHITESPACE"> Insert whitespaces between atom name and residue name, between x and y, and between y and z
+<input type="CHECKBOX" name="WHITESPACE"> Insert whitespaces between atom name and residue name, between x and y, and between y and z<BR>
+<input type="CHECKBOX" name="TYPEMAP"> Create Typemap output
 </blockquote>
 
 <input type="submit" value="Submit"><P>
